<resources>
    <string name="app_name">Appricot</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="avengers_end_game">Avengers: \nEnd Game</string>
    <string name="avengers_end_game_line">Avengers: End Game</string>
    <string name="back_button">Back</string>
    <string name="filmImageDescription">film image</string>
    <string name="age_rate_13">13+</string>
    <string name="action_adventure_fantasy">Action, Adventure, Fantasy</string>
    <string name="reviews">%1$d Reviews</string>
    <string name="storyline">Storyline</string>
    <string name="story_line_description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="movies_list_header">Movies list</string>
    <string name="film_length">%1$d min</string>
</resources>
