<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/button_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="56dp"
            android:background="@color/button_background_transparent"
            android:text="@string/back_button"
            android:textAllCaps="false"
            android:textSize="12sp"
            app:icon="@drawable/back_arrow"
            app:layout_constraintStart_toStartOf="@+id/image_film"
            app:layout_constraintTop_toTopOf="@+id/image_film"
            app:rippleColor="@color/white" />

        <ImageView
            android:id="@+id/image_film"
            android:layout_width="0dp"
            android:layout_height="298dp"
            android:contentDescription="@string/filmImageDescription"
            android:foreground="@drawable/card_img_background"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/text_age_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="10dp"
            android:text="@string/age_rate_13"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/text_film_title"
            app:layout_constraintStart_toStartOf="@+id/image_film" />

        <TextView
            android:id="@+id/text_film_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="254dp"
            android:text="@string/avengers_end_game"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/image_film" />

        <TextView
            android:id="@+id/text_tag_line"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:text="@string/action_adventure_fantasy"
            android:textColor="@color/secondary_pink"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/image_film"
            app:layout_constraintStart_toStartOf="@+id/image_film"
            app:layout_constraintTop_toBottomOf="@+id/text_film_title" />

        <RatingBar
            android:id="@+id/rating_bar"
            style="@style/CustomRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="9dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="17dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_tag_line" />

        <TextView
            android:id="@+id/text_review_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/reviews"
            android:textAllCaps="true"
            android:textColor="@color/secondary_grey"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/rating_bar"
            app:layout_constraintTop_toBottomOf="@+id/text_tag_line" />

        <TextView
            android:id="@+id/text_story_line_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            android:text="@string/storyline"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/image_film"
            app:layout_constraintStart_toStartOf="@+id/image_film"
            app:layout_constraintTop_toBottomOf="@+id/text_review_score" />

        <TextView
            android:id="@+id/text_story_line_desctiption"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="16dp"
            android:text="@string/story_line_description"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/image_film"
            app:layout_constraintTop_toBottomOf="@+id/text_story_line_header" />

        <TextView
            android:id="@+id/text_cast_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="16dp"
            android:text="@string/cast"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/image_film"
            app:layout_constraintStart_toStartOf="@+id/image_film"
            app:layout_constraintTop_toBottomOf="@+id/text_story_line_desctiption" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/actors_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@+id/text_cast_header"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/text_cast_header"
            app:layout_constraintTop_toBottomOf="@+id/text_cast_header"
            tools:listitem="@layout/view_holder_actor" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
