<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/film_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="170dp"
            android:minHeight="330dp">

            <ImageView
                android:id="@+id/film_card_img"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:foreground="@drawable/card_img_background"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/text_card_film_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/text_list_age_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/rounded_corner"
                android:text="@string/age_rate_13"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/film_card_img"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_like"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="5dp"
                app:layout_constraintEnd_toEndOf="@+id/film_card_img"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/like" />

            <TextView
                android:id="@+id/text_tag_line"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/action_adventure_fantasy"
                android:textColor="@color/secondary_pink"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/rating_bar"
                app:layout_constraintEnd_toEndOf="@+id/film_card_img"
                app:layout_constraintStart_toStartOf="@+id/film_card_img" />

            <RatingBar
                android:id="@+id/rating_bar"
                style="@style/CustomRatingBar"
                android:layout_width="wrap_content"
                android:layout_height="9dp"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintBottom_toBottomOf="@+id/film_card_img"
                app:layout_constraintStart_toStartOf="@+id/film_card_img" />

            <TextView
                android:id="@+id/text_review_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/reviews"
                android:textAllCaps="true"
                android:textColor="@color/secondary_grey"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/film_card_img"
                app:layout_constraintEnd_toEndOf="@+id/film_card_img"
                app:layout_constraintStart_toEndOf="@+id/rating_bar" />

            <TextView
                android:id="@+id/text_card_film_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/avengers_end_game_line"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/text_film_length"
                app:layout_constraintEnd_toEndOf="@+id/film_card_img"
                app:layout_constraintStart_toStartOf="@+id/film_card_img" />

            <TextView
                android:id="@+id/text_film_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/film_length"
                android:textAllCaps="true"
                android:textColor="@color/secondary_grey"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
